# ai_website_builder_next

./: .gitignore  config.py  main.py  pyproject.toml
ai_worker/: claude.py  component_worker.py  factory.py  gemini.py  main.py  openai.py  playwright.py  playwright_tester.py
ai_worker/utils/: figma_extractor.py  global_state.py  prompts.py  sanity_client.py
assets/templates/nextjs/: layout.tsx
assets/templates/sanity/: client.ts  live.ts  sanity.config.ts
db/: migration.py
figma_worker/: figma_connection.py  main.py
project_init/: env_writer.py  git_init.py  main.py  runner.py  scaffold.py
