[project]
name = "ai-website-builder-next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.87.0",
    "asyncio>=4.0.0",
    "claude>=0.4.11",
    "google>=3.0.0",
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "imagehash>=4.3.2",
    "langgraph>=1.1.3",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "opencv-python>=4.13.0.92",
    "pillow>=11.1.0",
    "pydantic-settings>=2.13.1",
    "pytest-playwright>=0.7.2",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "sqlmodel>=0.0.37",
    "typing>=3.10.0.0",
]
